test/chainsaw/authpolicy/authpolicy-assert.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  labels:
    type: ztoperator.kartverket.no
  name: auth-policy
spec:
  jwtRules:
    - issuer: http://localhost:8080/default
      jwksUri: http://mock-oauth2.auth:8080/default/jwks
  selector:
    matchLabels:
      app: application-auth
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  labels:
    type: ztoperator.kartverket.no
  name: auth-policy-requireauth
spec:
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /
              - /deny
      when:
        - key: request.auth.claims[sub]
          values:
            - '*'
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /post
      when:
        - key: request.auth.claims[sub]
          values:
            - '*'
  selector:
    matchLabels:
      app: application-auth
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  labels:
    type: ztoperator.kartverket.no
  name: auth-policy-ignoreauth
spec:
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /robots.txt
  selector:
    matchLabels:
      app: application-auth
