test/chainsaw/authpolicy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: jwtrules
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: application.yaml
        - apply:
            file: wildcard-ingress.yaml
        - assert:
            file: application-assert.yaml
        - create:
            file: authpolicy.yaml
        - assert:
            file: authpolicy-assert.yaml
        - script:
            content: sleep 10
        - script:
            content: hurl --error-format long --variable token="$(../../../venv/bin/python ./../../../scripts/get-mock-oauth2-token.py)" --insecure --test tests.hurl
